# boiler-hue-edk

./: .gitignore  CMakeLists.txt  README.md  main.cpp
effects/: FadeEffect.cpp  FadeEffect.h
hue/: HueController.cpp  HueController.h
ndi/: NDIController.cpp  NDIController.h
src/: main.cpp
src/effects/: FadeEffect.h
src/ndi/: NDIController.cpp  NDIController.h
src/utils/: SignalHandler.h
utils/: SignalHandler.cpp
